# algotrading

./: README.it.md  README.md  main.py  pyproject.toml
.algotrading/: symbol_specs.json
algotrading/: __init__.py  utils.py
algotrading/backtest/: __init__.py  backtest_broker.py  backtest_session.py  backtester.py  monte_carlo.py  optimization.py  plotter.py  plotting.py  report.py  summary.py  workflow.py
algotrading/core/: __init__.py  bars.py  broker.py  execution_listener.py  feed.py  growable.py  position.py  runner.py  signal.py  strategy.py
algotrading/data/: __init__.py  cot.py
algotrading/indicators/: __init__.py  _rma.py  adx.py  atr.py  bbands.py  cot_index.py  ema.py  hhll.py  indicator.py  rsi.py  sma.py  supertrend.py
artifacts/stage4_shadow/: backtest_trades.csv  live_trades.csv  matched_diffs.csv  run_meta.json
docs/: optimisation.md  running-strategies.md  writing-strategies.md
my_strategies/bbands_reverse/: backtest.py  bbands_reverse.py  optimise.py
my_strategies/btc_scalper/: btc_scalper.py  btc_scalper_backtest.py
my_strategies/hhll_debug/: backtest.py
my_strategies/multi_strategy/: backtest.py  compare.py  main.py
my_strategies/rsi_reverse/: backtest.py  rsi_reverse.py
plots/bbands_reverse/: swap_history_table.html  trade_history_table.html
plots/btc_scalper/: trade_history_table.html
plots/hhll_debug/: trade_history.html
plots/multi_strategy/: swap_history_table_unified.html  trade_history_table_unified.html
plots/rsi_reverse/: swap_history_table.html  trade_history_table.html
tests/: test_utils.py
(+30 files in other folders)
