[project]
name = "algotrading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.5",
    "lightweight-charts>=2.1",
    "matplotlib>=3.10.7",
    "metatrader5>=5.0.5735",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.3.1",
    "sodapy>=2.2.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
